feat(cache): 实现二级缓存功能支持
- 新增 Cache 接口和 PerpetualCache 实现类
- 添加 TransactionalCache 和 TransactionalCacheManager 管理事务缓存
- 实现 CachingExecutor 包装基础执行器提供二级缓存
- 在 Configuration 中添加缓存配置和管理方法
- 支持 XML 配置中的 cacheEnabled 设置和 useCache 属性
- 添加命名空间级缓存和缓存键生成机制
- 实现缓存的提交、回滚和清空逻辑
- 在 UserXmlMapper 中新增 selectWithoutCacheById 方法用于测试
- 更新 README 文档说明二级缓存特性和配置方式
- 添加完整的二级缓存集成测试用例